<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLihatData">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailkontak"
        android:textSize="14pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="101dp" />

    <TextView
        android:id="@+id/tvNomorTelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="11pt"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/tvNamaKontak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="11pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notel"
        android:textSize="11pt"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="273dp" />

    <TextView
        android:id="@+id/tvNomorTelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notel"
        android:textSize="11pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="308dp" />
</androidx.constraintlayout.widget.ConstraintLayout>